cluster/gitops/system-controllers/kubevirt/operator/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kubevirt-operator
specs:
  - description: kubevirt-operator
    endpointSelector:
      matchLabels:
        kubevirt.io: virt-operator
        name: virt-operator
    egress:
      # To API server
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      # From API server for webhooks
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "8444"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cdi-operator
specs:
  - description: cdi-operator
    endpointSelector:
      matchLabels:
        cdi.kubevirt.io: cdi-operator
        name: cdi-operator
    egress:
      # To API server
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
    ingress:
      # From API server for webhooks
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "8444"
                protocol: TCP
      # Kubelet probes (/healthz, /readyz)
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8444"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
